--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "lint": "eslint --fix .",
     "eject": "react-scripts eject"
   },
   "browserslist": {
@@ -37,6 +38,10 @@
     ]
   },
   "devDependencies": {
-    "eslint": "^8.21.0"
+    "@typescript-eslint/eslint-plugin": "^5.32.0",
+    "@typescript-eslint/parser": "^5.32.0",
+    "eslint": "^8.21.0",
+    "eslint-plugin-jest": "^26.8.0",
+    "eslint-plugin-react": "^7.30.1"
   }
 }
